[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/Menu/menu.tres" type="Theme" id=1]
[ext_resource path="res://UI/Menu/back.png" type="Texture" id=2]
[ext_resource path="res://UI/Menu/Menu.gd" type="Script" id=3]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -85.6748
margin_top = -7.55951
margin_right = 548.325
margin_bottom = 273.44
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1151.27
margin_top = 522.679
margin_right = -75.7339
margin_bottom = -77.3214
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start" type="Button" parent="VBoxContainer"]
margin_right = 692.0
margin_bottom = 74.0
text = "START"

[node name="controls" type="Button" parent="VBoxContainer"]
margin_top = 124.0
margin_right = 692.0
margin_bottom = 198.0
text = "CONTROLS"

[node name="credits" type="Button" parent="VBoxContainer"]
margin_top = 248.0
margin_right = 692.0
margin_bottom = 322.0
text = "CREDITS"

[node name="exit" type="Button" parent="VBoxContainer"]
margin_top = 372.0
margin_right = 692.0
margin_bottom = 446.0
text = "EXIT"
[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="VBoxContainer/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
